examples/errors/part2_semantic1_binary_operator_invalid3.lya
dcl a string = "aaa" * "bbb";